...
    }

    var body: some View {
        VStack(alignment: .leading) {
            HStack {
                TextField("Email or username", text: $viewModel.recipient)
                    .accessibilityIdentifier("invite_recipient_input")
                Button("Invite") { viewModel.invite() }
                    .accessibilityIdentifier("invite_button")
            }

            if let error = viewModel.error {
                Text(error)
            }

...
